[project]
name = "unhinged-lander"
version = "0.1.0"
description = ""
authors = [
    {name = "Palash A.",email = "thisispalash@kdio.xyz"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=6.0.1,<7.0.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
start = "python manage.py runserver"