[project]
name = "unhinged-lander"
version = "0.1.0"
description = ""
authors = [
    {name = "Palash A.",email = "thisispalash@kdio.xyz"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = "~3.13"
dependencies = [
    "django (>=6.0.1,<7.0.0)",
    "dj-database-url (>=3.1.0,<4.0.0)",
    "psycopg[binary] (>=3.3.2,<4.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "gunicorn (>=25.0.1,<26.0.0)",
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
